unpackaged/main/default/objects/Customer_Service_Bucket__mdt/Customer_Service_Bucket__mdt.object-meta.xml
<CustomObject>
    <label>Customer Service Bucket</label>
    <pluralLabel>Customer Service Buckets</pluralLabel>
</CustomObject>