unpackaged/main/default/objects/Customer_Service_Bucket__mdt/fields/Default_Rep__c.field-meta.xml
<CustomField>
    <fullName>Default_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will designate a default rep to use in the "Opportunity - SMS Opt-In Contacts When Funded" flow if none were found. This is to ensure a customer service rep's number is being used for the outbound SMS</description>
    <label>Default Rep</label>
    <type>Checkbox</type>
</CustomField>