unpackaged/main/default/objects/Customer_Service_Bucket__mdt/fields/FRPSA__c.field-meta.xml
<CustomField>
    <fullName>FRPSA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if rep is responsible for FRPSA portfolios</inlineHelpText>
    <label>FRPSA</label>
    <type>Checkbox</type>
</CustomField>