unpackaged/main/default/objects/Customer_Service_Bucket__mdt/fields/FRPSA_Upper_Threshold__c.field-meta.xml
<CustomField>
    <fullName>FRPSA_Upper_Threshold__c</fullName>
    <label>FRPSA Upper Threshold</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>