unpackaged/main/default/objects/Customer_Service_Bucket__mdt/fields/Lower_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lower_Threshold__c</fullName>
    <description>Lowest funding amount that falls within the customer service rep's assigned range</description>
    <inlineHelpText>Lowest funding amount that falls within the customer service rep's assigned range</inlineHelpText>
    <label>Lower Threshold</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>