unpackaged/main/default/objects/Customer_Service_Bucket__mdt/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <inlineHelpText>18 character ID</inlineHelpText>
    <label>User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>